<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.nivel36</groupId>
	<artifactId>laie</artifactId>
	<version>0.38.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>laie</name>
	<modules>
		<module>nivel36-login</module>
		<module>laie-ear</module>
		<module>laie-ejb</module>
		<module>laie-web</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.target>21</maven.compiler.target>

		<m2e.jpa.activation>false</m2e.jpa.activation> <!-- fix eclipse bug -->

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
		<laie.version>${project.version}</laie.version>

		<primefaces.version>15.0.4</primefaces.version>
		<poi.version>5.3.0</poi.version>
		<omnifaces.version>4.6.2</omnifaces.version>
		<commons-fileupload.version>1.5</commons-fileupload.version>
		<owasp-java-html-sanitizer.version>20240325.1</owasp-java-html-sanitizer.version>
		<html2pdf.version>5.0.4</html2pdf.version>

		<version.mockito>5.12.0</version.mockito>
		<version.server.bom>33.0.2.Final</version.server.bom>
		<version.junit.bom>5.10.3</version.junit.bom>
		<version.sl4f-simple>2.0.13</version.sl4f-simple>

		<maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
		<maven.war.plugin.version>3.4.0</maven.war.plugin.version>
		<maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-ee-with-tools-builder</artifactId>
				<version>${version.server.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-microprofile</artifactId>
				<version>${version.server.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${version.junit.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<version>${primefaces.version}</version>
				<classifier>jakarta</classifier>
			</dependency>

			<dependency>
				<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
				<artifactId>owasp-java-html-sanitizer</artifactId>
				<version>${owasp-java-html-sanitizer.version}</version>
			</dependency>

			<dependency>
				<groupId>org.omnifaces</groupId>
				<artifactId>omnifaces</artifactId>
				<version>${omnifaces.version}</version>
			</dependency>

			<!-- Apache POI -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-full</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- iText -->
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>html2pdf</artifactId>
				<version>${html2pdf.version}</version>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>laie-commons-excel</artifactId>
				<version>${laie.version}</version>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>laie-ejb</artifactId>
				<version>${laie.version}</version>
				<type>ejb</type>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>laie-web</artifactId>
				<version>${laie.version}</version>
				<type>war</type>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>nivel36-login-ejb</artifactId>
				<version>${laie.version}</version>
				<type>ejb</type>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>nivel36-login-jsf</artifactId>
				<version>${laie.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>${pdfbox.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-hibernate5</artifactId>
				<version>${jackson-datatype-hibernate5.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-inline</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${version.sl4f-simple}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>${maven.ejb.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>${maven.ear.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven.war.plugin.version}</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
